[gd_scene load_steps=9 format=3 uid="uid://tq3hr05vu4ux"]

[ext_resource type="Script" path="res://Code/Player.gd" id="1_okj7e"]
[ext_resource type="Texture2D" uid="uid://bkax38twpboyd" path="res://art/Hit.png" id="2_4ww1s"]
[ext_resource type="Texture2D" uid="uid://d0hcr2o0b71xf" path="res://art/Chef_Attack.png" id="3_so3ve"]
[ext_resource type="Texture2D" uid="uid://djdnfab38mswp" path="res://art/Chef_Idle.png" id="4_t673k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c40pp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_so3ve")
}],
"loop": false,
"name": &"Attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_t673k")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pd45i"]
radius = 210.0

[sub_resource type="CircleShape2D" id="CircleShape2D_djehj"]
radius = 286.667

[sub_resource type="CircleShape2D" id="CircleShape2D_3w5p6"]
radius = 753.363

[node name="Player" type="CharacterBody2D"]
position = Vector2(606, 317)
scale = Vector2(0.3, 0.3)
collision_mask = 4
script = ExtResource("1_okj7e")

[node name="HitEffect" type="Sprite2D" parent="."]
visible = false
position = Vector2(353.333, -23.3333)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_4ww1s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-5.91936, -32.4029)
rotation = -0.174533
sprite_frames = SubResource("SpriteFrames_c40pp")
animation = &"Idle"
centered = false
offset = Vector2(-400, -500)

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0.747238, 0.93045)
shape = SubResource("CircleShape2D_pd45i")

[node name="Attack" type="Area2D" parent="."]
position = Vector2(77.4139, -32.4029)
collision_layer = 16
collision_mask = 2

[node name="Hurtbox" type="CollisionShape2D" parent="Attack"]
position = Vector2(183.333, -73.3333)
shape = SubResource("CircleShape2D_djehj")

[node name="Interaction" type="Area2D" parent="."]
position = Vector2(77.4139, -32.4029)
collision_layer = 0
collision_mask = 8

[node name="Pickup" type="CollisionShape2D" parent="Interaction"]
position = Vector2(-80, 33.3333)
shape = SubResource("CircleShape2D_3w5p6")

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="SetDownPosition" type="Node2D" parent="."]
position = Vector2(283.333, 110)

[node name="HeldItemPosition" type="Node2D" parent="."]
position = Vector2(-100, -600)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Attack" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Interaction" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
